Dev fix: Correct alignment error for popover
DD-2771

--- a/css/buttons.semanticui.scss
+++ b/css/buttons.semanticui.scss
@@ -7,6 +7,7 @@ div.dt-button-collection.ui.dropdown {
 	width: 200px;
 	margin-top: 3px !important;
 	z-index: 2002;
+	transition: none;
 	
 	// Move styles to parent container
 	box-shadow: 0 2px 3px 0 rgba(34,36,38,.15);
